2014-09-15  peavo@outlook.com  <peavo@outlook.com>

        [WinCairo] Make it easier to enable/disable GStreamer.
        https://bugs.webkit.org/show_bug.cgi?id=135766

        Reviewed by Brent Fulgham.

        Make it possible to enable/disable GStreamer by editing the new user macro ENABLE_GSTREAMER_WINCAIRO.

        * WebCore.vcxproj/WebCoreDebugWinCairo.props: Import GStreamer property file.
        * WebCore.vcxproj/WebCoreReleaseWinCairo.props: Ditto.

2014-09-12  Sergio Villar Senin  <svillar@igalia.com>

        [CSS Grid Layout] Crash at CSSParser::parseGridTemplateRowsAndAreas
        https://bugs.webkit.org/show_bug.cgi?id=136778

        Reviewed by Darin Adler.

        An empty list of grid line names (represented by "()") does not
        add anything to the list of parsed values. That's why trying to
        concatenate an adjacent list of grid line names was failing,
        because we were trying to concatenate a list with the last parsed
        CSSValue which was not the expected grid line names list.

        * css/CSSParser.cpp:
        (WebCore::CSSParser::parseGridTemplateRowsAndAreas):
        (WebCore::CSSParser::parseGridLineNames):
        * css/CSSParser.h:

2014-09-15  Andres Gomez  <agomez@igalia.com>

        [GStreamer] don't send transferMode HTTP header
        https://bugs.webkit.org/show_bug.cgi?id=136781

        Reviewed by Philippe Normand.

        No header at all is better than having the wrong header as DLNA
        mandates that a missing header has to be tolerated while a wrong
        header is an error.

        * platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:
        (webKitWebSrcStart):
        * platform/network/HTTPHeaderNames.in:

2014-09-14  Christophe Dumez  <cdumez@apple.com>

        Fix post-mortem nits for r173528 & r173549
        https://bugs.webkit.org/show_bug.cgi?id=136808

        Reviewed by Darin Adler.

        Fix post-mortem nits for r173528 & r173549.
