@@ -1,3 +1,14 @@
+2014-09-15  Zan Dobersek  <zdobersek@igalia.com>
+
+        [GTK][CMake] Build WebCore with Wayland-specific include directories, libraries
+        https://bugs.webkit.org/show_bug.cgi?id=136815
+
+        Reviewed by Philippe Normand.
+
+        * PlatformGTK.cmake: Add the platform/graphics/wayland/ directory to the list of
+        WebCore's include directories. Add include directories of the Wayland dependency
+        to the list of WebCore's include directories. Same for the Wayland libraries.
+
 2014-09-15  peavo@outlook.com  <peavo@outlook.com>
 
         [WinCairo] Make it easier to enable/disable GStreamer.
